--- a/index.html
+++ b/index.html
@@ -43,13 +43,21 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
     </nav>
 <!--Navigation Bar Ends-->
     <main class="container" id="mainContent">
-
+<div class="row">
+  <div class=".col-md-3">
         <h1>Welcome to Lesson 4</h1>
+</div>
+
+<div class=".col-md-6">
         <p id="firstParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis voluptatibus odio officia</p>
-<img class="img-responsive" src="images/portrait.png" alt="Chania">
+      </div>
+      
+      <div class=".col-md-3">
+            <img class="img-responsive" src="images/portrait.png" alt="Chania">
+      </div>
+      
+      </div>
     </main>
-
-
     <!-- JavaScript Section -->
     <script src="Scripts/lib/jquery-2.2.0.min.js"></script>
     <script src="Scripts/lib/bootstrap.min.js"></script>
