--- a/contact-me.html
+++ b/contact-me.html
@@ -74,7 +74,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
                                     </div>
                                     <div class="form-group">
                                           <div class="col-lg-8 col-lg-offset-2">
-                                                <a class="btn btn-info" type="submit" href="index.html">Submit</a>
+                                                <a class="btn btn-default" type="submit" href="index.html">Submit</a>
                                                 <button type="reset" class="btn btn-default">Cancel</button>
                                           </div>
                                     </div>
