--- a/contact-me.html
+++ b/contact-me.html
@@ -13,7 +13,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
       <link rel="stylesheet" href="Content/css/bootstrap-theme.min.css">
       <link rel="stylesheet" href="Content/css/font-awesome.min.css">
       <link rel="stylesheet" href="Content/app.css">
-      <title>Welcome</title>
+      <title>Lane Graff | Design</title>
 </head>
 
 <body>
