--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
       <link rel="stylesheet" href="Content/css/font-awesome.min.css">
       <link rel="stylesheet" href="Content/app.css">
       <link rel="stylesheet" href="Content/css/style.css">
-      <title>COMP1073 - Lesson 4</title>
+      <title>Lane Graff | Design</title>
 
 </head>
 
