--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
     <link rel="stylesheet" href="Content/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="Content/css/font-awesome.min.css">
     <link rel="stylesheet" href="Content/app.css">
-    <title>COMP1073 - Lesson 4</title>
+    <title>Lane Graff | Design</title>
 </head>
 
 <body>
@@ -47,11 +47,44 @@ html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{
         <!-- /.container-fluid -->
     </nav>
 
-    <main class="container" id="mainContent">
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/gravity-movieposter.png" alt="Gravity Movie Poster">
+      <div class="caption">
+        <h3>Gravity Movie Poster</h3>
+        <p>Made with just HTML and CSS</p>
+        <p><a href="http://gc100087541.computerstudi.es/Gravity/gravity.html" class="btn btn-default" role="button">View</a></p>
+      </div>
+    </div>
+  </div>
+</div>
 
-        <h1>Welcome to Lesson 4</h1>
-        <p id="firstParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis voluptatibus odio officia</p>
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/voxamp-microsite.png" alt="Vox Amps Micro Site">
+      <div class="caption">
+        <h3>Vox Amps - MicroSite</h3>
+        <p>Final project for semester one Intro to Web Programming</p>
+        <p><a href="http://gc100087541.computerstudi.es/vox-ac30/index.html" class="btn btn-default" role="button">View</a></p>
+      </div>
+    </div>
+  </div>
+</div>
 
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/favorite-songs.png" alt="Favorite Songs Database">
+      <div class="caption">
+        <h3>Song Input Form & Database</h3>
+        <p>Assignment One using PHP and SQL</p>
+        <p><a href="http://gc100087541.computerstudi.es/assign-one/songs.php" class="btn btn-default" role="button">View</a></p>
+      </div>
+    </div>
+  </div>
+</div>
     </main>
 
 
