--- a/projects.html
+++ b/projects.html
@@ -1,97 +1,89 @@
 <!DOCTYPE html>
-<!-- emmet command:
-html[lang="en"]>(head>(meta[charset="utf-8"])(title{COMP1073-Lesso4}))+(body>h1{Welcome to lesson 4}+p>lorem100)
--->
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- CSS Section -->
-    <link rel="stylesheet" href="Content/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Content/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="Content/css/font-awesome.min.css">
-    <link rel="stylesheet" href="Content/app.css">
-    <title>Lane Graff | Design</title>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- CSS Section -->
+      <link rel="stylesheet" href="Content/css/bootstrap.min.css">
+      <link rel="stylesheet" href="Content/css/bootstrap-theme.min.css">
+      <link rel="stylesheet" href="Content/css/font-awesome.min.css">
+      <title>Lane Graff | Design</title>
 </head>
 
 <body>
+<!--Navigation Bar Begins-->
+      <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                  <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+                        aria-expanded="false">
+                              <span class="sr-only">Toggle navigation</span>
+                              <span class="icon-bar"></span>
+                              <span class="icon-bar"></span>
+                              <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#"><i class="fa fa-bold"></i></a>
+                  </div>
+                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-                aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#"><i class="fa fa-bold"></i></a>
+                        <ul class="nav navbar-nav">
+                              <li><a href="index.html"><i class="fa fa-angle-double-right"></i> About Me</a></li>
+                              <li class="active"><a href="projects.html"><i class="fa fa-code"></i> My Projects</a></li>
+                              <li><a href="contact-me.html"><i class="fa fa-envelope-o"></i> Contact Me</a></li>
+                        </ul>
+                  </div>
+            </div>
+      </nav>
+<!--Navigation Bar Ends-->
+      <main>
+            <main class="container" id="mainContent">
+            <div class="row">
+                        <div class="thumbnail">
+                              <img src="images/gravity-movieposter.png" alt="Gravity Movie Poster">
+                              <div class="caption">
+                                    <h3>Gravity Movie Poster</h3>
+                                    <p id="gravityPoster">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis
+                                          voluptatibus odio officia</p>
+                                    <p><a href="http://gc100087541.computerstudi.es/Gravity/gravity.html" class="btn btn-default"
+                                          role="button">View</a></p>
+                              </div>
+                        </div>
+                  </div>
+
+            <div class="row">
+                        <div class="thumbnail">
+                              <img src="images/voxamp-microsite.png" alt="Vox Amps Micro Site">
+                              <div class="caption">
+                                    <h3>Vox Amps - MicroSite</h3>
+                                    <p id="voxAmp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis
+                                          voluptatibus odio officia.</p>
+                                    <p><a href="http://gc100087541.computerstudi.es/vox-ac30/index.html" class="btn btn-default"
+                                          role="button">View</a></p>
+                              </div>
+                        </div>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                
-                <ul class="nav navbar-nav">
-                    <li><a href="index.html"><i class="fa fa-angle-double-right"></i> About Me</a></li>
-                    <li class="active"><a href="projects.html"><i class="fa fa-code"></i> My Projects</a></li>
-                    <li><a href="contact-me.html"><i class="fa fa-envelope-o"></i> Contact Me</a></li>
-                    
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-
-<div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/gravity-movieposter.png" alt="Gravity Movie Poster">
-      <div class="caption">
-        <h3>Gravity Movie Poster</h3>
-        <p>Made with just HTML and CSS</p>
-        <p><a href="http://gc100087541.computerstudi.es/Gravity/gravity.html" class="btn btn-default" role="button">View</a></p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/voxamp-microsite.png" alt="Vox Amps Micro Site">
-      <div class="caption">
-        <h3>Vox Amps - MicroSite</h3>
-        <p>Final project for semester one Intro to Web Programming</p>
-        <p><a href="http://gc100087541.computerstudi.es/vox-ac30/index.html" class="btn btn-default" role="button">View</a></p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/favorite-songs.png" alt="Favorite Songs Database">
-      <div class="caption">
-        <h3>Song Input Form & Database</h3>
-        <p>Assignment One using PHP and SQL</p>
-        <p><a href="http://gc100087541.computerstudi.es/assign-one/songs.php" class="btn btn-default" role="button">View</a></p>
-      </div>
-    </div>
-  </div>
-</div>
-    </main>
+            <div class="row">
+                        <div class="thumbnail">
+                              <img src="images/favorite-songs.png" alt="Favorite Songs Database">
+                              <div class="caption">
+                                    <h3>Song Input Form & Database</h3>
+                                    <p id="favoriteSong">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis
+                                          voluptatibus odio officia</p>
+                                    <p><a href="http://gc100087541.computerstudi.es/assign-one/songs.php" class="btn btn-default"
+                                          role="button">View</a></p>
+                              </div>
+                        </div>
+                  </div>
+      </main>
 
 
-    <!-- JavaScript Section -->
-    <script src="Scripts/lib/jquery-2.2.0.min.js"></script>
-    <script src="Scripts/lib/bootstrap.min.js"></script>
-    <script src="Scripts/app.js"></script>
+      <!-- JavaScript Section -->
+      <script src="Scripts/lib/jquery-2.2.0.min.js"></script>
+      <script src="Scripts/lib/bootstrap.min.js"></script>
+      <script src="Scripts/app2.js"></script>
 </body>
 
 </html>
