--- a/projects.html
+++ b/projects.html
@@ -46,8 +46,8 @@
                                     <h3>Gravity Movie Poster</h3>
                                     <p id="gravityPoster">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis
                                           voluptatibus odio officia</p>
-                                    <p><a href="http://gc100087541.computerstudi.es/Gravity/gravity.html" class="btn btn-default"
-                                          role="button">View</a></p>
+                                    <p><a href="http://gc100087541.computerstudi.es/Gravity/gravity.html" class="btn btn-link btn-block"
+                                          role="button">View Project</a></p>
                               </div>
                         </div>
                   </div>
@@ -59,8 +59,8 @@
                                     <h3>Vox Amps - MicroSite</h3>
                                     <p id="voxAmp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis
                                           voluptatibus odio officia.</p>
-                                    <p><a href="http://gc100087541.computerstudi.es/vox-ac30/index.html" class="btn btn-default"
-                                          role="button">View</a></p>
+                                    <p><a href="http://gc100087541.computerstudi.es/vox-ac30/index.html" class="btn btn-link btn-block"
+                                          role="button">View Project</a></p>
                               </div>
                         </div>
             </div>
@@ -72,8 +72,8 @@
                                     <h3>Song Input Form & Database</h3>
                                     <p id="favoriteSong">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis
                                           voluptatibus odio officia</p>
-                                    <p><a href="http://gc100087541.computerstudi.es/assign-one/songs.php" class="btn btn-default"
-                                          role="button">View</a></p>
+                                    <p><a href="http://gc100087541.computerstudi.es/assign-one/songs.php" class="btn btn-link btn-block"
+                                          role="button">View Project</a></p>
                               </div>
                         </div>
                   </div>
