--- a/contact-me.html
+++ b/contact-me.html
@@ -25,7 +25,7 @@
                               <span class="icon-bar"></span>
                               <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><i class="fa fa-bold"></i></a>
+                        <a class="navbar-brand" href="index.html"><i class="fa fa-home"></i></a>
                   </div>
                   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
 
@@ -41,7 +41,7 @@
       <main class="container" id="mainContent">
             <div class="row">
                   <div class="col-sm-8">
-                        <h3>Contact Information</h3>
+                        <h3>Contact Me</h3>
                         <!--Contact Form Begins-->
                         <form class="form-horizontal">
                               <fieldset>
@@ -71,8 +71,8 @@
                                     </div>
                                     <div class="form-group">
                                           <div class="col-lg-8 col-lg-offset-2">
-                                                <a class="btn btn-default" type="submit" href="index.html">Submit</a>
-                                                <button type="reset" class="btn btn-default">Cancel</button>
+                                                <a class="btn btn-danger" type="submit" href="index.html">Submit</a>
+                                                <button type="reset" class="btn btn-danger">Cancel</button>
                                           </div>
                                     </div>
                               </fieldset>
