--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="Content/css/bootstrap.min.css">
       <link rel="stylesheet" href="Content/css/bootstrap-theme.min.css">
       <link rel="stylesheet" href="Content/css/font-awesome.min.css">
+      <link rel="stylesheet" href="Content/css/style.css">
       <title>Lane Graff | Design</title>
 </head>
 
@@ -24,7 +25,7 @@
                               <span class="icon-bar"></span>
                               <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><i class="fa fa-bold"></i></a>
+                        <a class="navbar-brand" href="index.html"><i class="fa fa-home"></i></a>
                   </div>
                   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
