--- a/contact-me.html
+++ b/contact-me.html
@@ -13,7 +13,8 @@
       <title>Lane Graff | Design</title>
 </head>
 
-<body>
+<body id="contact">
+      
       <!--Navigation Bar Begins-->
       <nav class="navbar navbar-default">
             <div class="container-fluid">
@@ -46,32 +47,32 @@
                         <form class="form-horizontal">
                               <fieldset>
                                     <div class="form-group">
-                                          <label for="inputName" class="col-lg-2 control-label" required>Your Name <small>[Required]</small></label>
+                                          <label for="name" class="col-lg-2 control-label" required>Your Name <small>[Required]</small></label>
                                           <div class="col-lg-5">
-                                                <input type="text" class="form-control" id="inputName" placeholder="Name" required>
+                                                <input type="text" class="form-control" id="Name" placeholder="Name" required>
                                           </div>
                                     </div>
                                     <div class="form-group">
                                           <label for="inputEmail" class="col-lg-2 control-label" required>Your Email <small>[Required]</small></label>
                                           <div class="col-lg-5">
-                                                <input type="text" class="form-control" id="inputEmail" placeholder="Email" required>
+                                                <input type="email" class="form-control" id="email" placeholder="Email" required>
                                           </div>
                                     </div>
                                     <div class="form-group">
-                                          <label for="inputSubject" class="col-lg-2 control-label">Subject</label>
+                                          <label for="subject" class="col-lg-2 control-label">Subject</label>
                                           <div class="col-lg-5">
-                                                <input type="text" class="form-control" id="inputSubject" placeholder="Subject">
+                                                <input type="text" class="form-control" id="subject" placeholder="Subject">
                                           </div>
                                     </div>
                                     <div class="form-group">
-                                          <label for="textArea" class="col-lg-2 control-label">Your Message:</label>
+                                          <label for="message" class="col-lg-2 control-label">Your Message:</label>
                                           <div class="col-lg-5">
-                                                <textarea class="form-control" rows="6" id="textArea"></textarea>
+                                                <textarea class="form-control" rows="6" id="message"></textarea>
                                           </div>
                                     </div>
                                     <div class="form-group">
                                           <div class="col-lg-8 col-lg-offset-2">
-                                                <a class="btn btn-danger" type="submit" href="index.html">Submit</a>
+                                                <button id="submitButton" class="btn btn-danger" type="submit" href="index.html">Submit</a>
                                                 <button type="reset" class="btn btn-danger">Cancel</button>
                                           </div>
                                     </div>
