--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,8 @@
       <title>Lane Graff | Design</title>
 </head>
 
-<body>
+<body id="projects">
+      
 <!--Navigation Bar Begins-->
       <nav class="navbar navbar-default">
             <div class="container-fluid">
