--- a/contact-me.html
+++ b/contact-me.html
@@ -13,8 +13,8 @@
       <title>Lane Graff | Design</title>
 </head>
 
-<body id="contact">
-      
+<body>
+
       <!--Navigation Bar Begins-->
       <nav class="navbar navbar-default">
             <div class="container-fluid">
@@ -72,15 +72,14 @@
                                     </div>
                                     <div class="form-group">
                                           <div class="col-lg-8 col-lg-offset-2">
-                                                <button id="submitButton" class="btn btn-danger" type="submit" href="index.html">Submit</a>
-                                                <button type="reset" class="btn btn-danger">Cancel</button>
+                                                <button id="submitButton" type="submit" class="btn btn-default">Submit</button>
                                           </div>
                                     </div>
                               </fieldset>
                         </form>
                   </div>
                   <div class="col-sm-4">
-                              <h3>Contact Information</h3>
+                        <h3>Contact Information</h3>
                         <div class="list-group">
                               <a href="#" class="list-group-item"><i class="fa fa-envelope"></i> blanegraff@yahoo.ca</a>
                               <a href="https://www.facebook.com/blanegraff" class="list-group-item"><i class="fa fa-facebook"></i> Facebook</a>
