--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body id="about">
+<body>
 
       <!--Navigation Bar Begins-->
       <nav class="navbar navbar-default">
@@ -42,8 +42,7 @@
       <img id="logo" src="images/logo.png" alt="logo" style="width:158px;height:128px" ;>
 
             <main class="container" id="mainContent">
-                  <p id="firstParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis voluptatibus
-                        odio officia</p>
+                  <p id="firstParagraph">..</p>
                   <img id="portrait" src="images/portrait.png" alt="portrait" style="width:250px;height:250px" ;>
       </main>
       <!-- JavaScript Section -->
