--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
       <title>Lane Graff | Design</title>
 </head>
 
-<body id="projects">
+<body>
       
 <!--Navigation Bar Begins-->
       <nav class="navbar navbar-default">
@@ -46,8 +46,7 @@
                               <img src="images/gravity-movieposter.png" alt="Gravity Movie Poster">
                               <div class="caption">
                                     <h3>Gravity Movie Poster</h3>
-                                    <p id="gravityPoster">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis
-                                          voluptatibus odio officia</p>
+                                    <p id="gravityPoster">../p>
                                     <p><a href="http://gc100087541.computerstudi.es/Gravity/gravity.html" class="btn btn-link btn-block"
                                           role="button">View Project</a></p>
                               </div>
@@ -59,8 +58,7 @@
                               <img src="images/voxamp-microsite.png" alt="Vox Amps Micro Site">
                               <div class="caption">
                                     <h3>Vox Amps - MicroSite</h3>
-                                    <p id="voxAmp">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis
-                                          voluptatibus odio officia.</p>
+                                    <p id="voxAmp">...</p>
                                     <p><a href="http://gc100087541.computerstudi.es/vox-ac30/index.html" class="btn btn-link btn-block"
                                           role="button">View Project</a></p>
                               </div>
@@ -72,8 +70,7 @@
                               <img src="images/favorite-songs.png" alt="Favorite Songs Database">
                               <div class="caption">
                                     <h3>Song Input Form & Database</h3>
-                                    <p id="favoriteSong">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et laboriosam illum perspiciatis
-                                          voluptatibus odio officia</p>
+                                    <p id="favoriteSong">...</p>
                                     <p><a href="http://gc100087541.computerstudi.es/assign-one/songs.php" class="btn btn-link btn-block"
                                           role="button">View Project</a></p>
                               </div>
@@ -85,7 +82,7 @@
       <!-- JavaScript Section -->
       <script src="Scripts/lib/jquery-2.2.0.min.js"></script>
       <script src="Scripts/lib/bootstrap.min.js"></script>
-      <script src="Scripts/app2.js"></script>
+      <script src="Scripts/projects.js"></script>
 </body>
 
 </html>
